--- a/index.html
+++ b/index.html
@@ -12,13 +12,31 @@
         <h1>Matias Brino</h1>
         <h2>Fan de los video juegos</h2>
         <div class="icons">
-            <img src="images/instagram.png" alt="">
-            <img src="images/youtube.png" alt="">
-            <img src="images/correo-electronico.png" alt="">
+            <a href="https://www.instagram.com">
+            <img src="images/instagram.png" alt="instagram.com">
+            </a>
+            <a href="https://www.youtube.com">
+            <img src="images/youtube.png" alt="youtube.com">
+            </a>
+            <a href="https://mail.google.com/mail/u/0/#inbox">
+            <img src="images/correo-electronico.png" alt="gmail.com">
+            </a>
+            
         </div>
     </div>
-    <div>
-        
+    <div class="links">
+        <div class="boton">
+            <img class="img-boton" src="images/Foto0081_001m_400x400.jpg" alt="img">
+            <a href="Identikit/identikit.html" class="link-boton">Identikit</a>
+        </div>
+        <div class="boton">
+            <img class="img-boton" src="images/Philips_tele-spiel_es2201.jpg" alt="img">
+            <a href="Blog/index.html" class="link-boton">Blog</a>
+        </div>
+        <div class="boton">
+            <img class="img-boton" src="images/thumbnail.png" alt="img">
+            <a href="clase11/index.html" class="link-boton">Transición</a>
+        </div>
     </div>
 </body>
 </html>
