--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                 <img class="img-boton" src="images/thumbnail.png" alt="img">
                 <a href="clase11/index.html" class="link-boton">Transición</a>
             </div>
+            <div class="boton">
+                <img class="img-boton" src="./eCommerce/img/DARK-GAMEZ.jpg" alt="img">
+                <a href="./eCommerce/index.html" class="link-boton">Transición</a>
+            </div>
         </div>
     </div>
     
